k8s/environment/config/local_ai.yml
# https://raw.githubusercontent.com/mudler/LocalAI-examples/refs/heads/main/kubernetes/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: local-ai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-ai
  namespace: local-ai
  labels:
    app: local-ai
spec:
  selector:
    matchLabels:
      app: local-ai
  replicas: 1
  template:
    metadata:
      labels:
        app: local-ai
      name: local-ai
    spec:
      containers:
        - args:
          - phi-2
          name: local-ai
          image: quay.io/go-skynet/local-ai:master
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: models-volume
              mountPath: /build/models
      volumes:
        - name: models-volume
          persistentVolumeClaim:
            claimName: models-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: local-ai
  namespace: local-ai
spec:
  selector:
    app: local-ai
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
