k8s/environment/config/ingress_local_ai.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localai-http-ingress-local
  namespace: local-ai
  annotations:
    # restrict to private network scopes
    # look at externalTrafficPolicy otherwise client ip is obfuscated "nginx.ingress.kubernetes.io/whitelist-source-range": "192.168.1.0/24"
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: mklocalai.mediakraken.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-ai
            port:
              number: 8090
