k8s/environment/config/ingress_rabbit_http.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-http-ingress-local
  namespace: rabbitmq-system
  annotations:
    # restrict to private network scopes
    # look at externalTrafficPolicy otherwise client ip is obfuscated "nginx.ingress.kubernetes.io/whitelist-source-range": "192.168.1.0/24"
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: mkrabbitmq.mediakraken.media
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mkstack-rabbitmq-production
            port:
              number: 15672
