k8s/environment/config/ingress_stackgres_https.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackgres-https-ingress-local
  namespace: stackgres
  annotations:
    # restrict to private network scopes
    # look at externalTrafficPolicy otherwise client ip is obfuscated "nginx.ingress.kubernetes.io/whitelist-source-range": "192.168.1.0/24"
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: mkstackgres.mediakraken.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stackgres-restapi
            port:
              number: 443
