k8s/environment/config/pgadmin4.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-http-ingress-com-pgadmin
  namespace: pgadmin
  annotations:
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mkpgadmin.mediakraken.media
      secretName: letsencrypt-pgadmin-priv
  rules:
  - host: mkpgadmin.mediakraken.media
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
